# inst_posts_loader

./: .env-example  Makefile  README.md  docker-compose.dev.yml  docker-compose.prod.yml  start.sh
backend/: .gitignore  Dockerfile  downloader.py  main.py  pyproject.toml  settings.py
backend/api/: controllers.py  models.py  routers.py
backend/app/: downloader.py  main.py  settings.py
backend/app/api/: controllers.py  models.py  routers.py
backend/app/api/routers/: accounts.py  auth.py  posts.py
backend/app/api/schemas/: auth.py  posts.py
backend/app/core/: postgres.py  redis.py  settings.py
backend/app/db/: database.py  models.py
backend/app/models/: posts.py
backend/app/redis_db/: database.py
backend/app/services/: posts.py  redis.py
backend/app/utils/: sse_safe.py
backend/db/: database.py  models.py
backend/redis_db/: database.py
frontend/: Dockerfile  components.json  index.html  package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/components/common/AccountCard/: AccountCard.tsx
frontend/src/components/common/Header/: Header.tsx
frontend/src/components/common/PostCard/: PostCard.tsx
frontend/src/components/ui/: Select.tsx
frontend/src/components/ui-shadcn/: button.tsx  dialog.tsx  select.tsx
frontend/src/layouts/: Root.tsx  index.ts
frontend/src/lib/: utils.ts
frontend/src/lib/hooks/: index.ts  useSSE.tsx  useSWR.tsx
frontend/src/pages/: Account.tsx  Accounts.tsx  DownloadPost.tsx  Main.tsx  Post.tsx
frontend/src/routes/: Routes.tsx
frontend/src/typings/: index.ts
(+2 files in other folders)
