[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic>=1.16.5",
    "argon2-cffi>=25.1.0",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.2",
    "httpx>=0.28.1",
    "instaloader>=4.14.2",
    "mypy>=1.18.1",
    "pydantic-settings>=2.10.1",
    "pyjwt[crypto]>=2.10.1",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "redis[async]>=6.4.0",
    "ruff>=0.13.1",
    "sqlalchemy>=2.0.43",
]
